Changes up to profile

--- a/technogalaxy/src/App.css
+++ b/technogalaxy/src/App.css
@@ -18,7 +18,6 @@
   justify-content: space-around;
 }
 li {
-  color: white;
   text-shadow: 0 0 10px rgb(124, 110, 202), 0 0 20px rgb(124, 110, 202),
     0 0 30px rgb(39, 39, 135), 0 0 42px rgb(39, 39, 135),
     0 0 82px rgb(39, 39, 135), 0 0 100px rgb(39, 39, 135),
@@ -26,11 +25,49 @@ li {
 }
 
 .appLink {
+  display: block;
   text-decoration: none;
+  color: white;
 }
 
 .link {
   cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropButton {
+  background-color: rgb(11, 18, 63);
+  border: rgb(11, 18, 63);
+  color: white;
+  padding: 16px 40px;
+  text-shadow: 0 0 10px rgb(124, 110, 202), 0 0 20px rgb(124, 110, 202),
+    0 0 30px rgb(39, 39, 135), 0 0 42px rgb(39, 39, 135),
+    0 0 82px rgb(39, 39, 135), 0 0 100px rgb(39, 39, 135),
+    0 0 120px rgb(39, 39, 135);
+}
+
+.dropContent {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  padding-top: 16px;
+  padding-right: 100px;
+}
+.linkAccount {
+  background-color: rgb(11, 18, 63);
+  padding: 20px 50px;
+}
+.linkAccount:hover {
+  background-color: darkslateblue;
+  color: white;
+}
+
+.dropdown:hover .dropContent {
+  display: block;
 }
 
 .footer {
