Changes in file directories

--- a/technogalaxy/frontend/src/App.css
+++ b/technogalaxy/frontend/src/App.css
@@ -56,10 +56,11 @@ li {
   z-index: 1;
   padding-top: 16px;
   padding-right: 100px;
+  margin-right: 100px;
 }
 .linkAccount {
   background-color: rgb(11, 18, 63);
-  padding: 20px 50px;
+  padding: 10px 45px;
 }
 .linkAccount:hover {
   background-color: darkslateblue;
