--- a/technogalaxy/frontend/src/components/Categories/Categories.css
+++ b/technogalaxy/frontend/src/components/Categories/Categories.css
@@ -24,6 +24,10 @@
     0 0 30px rgb(39, 39, 135);
   font-size: 40px;
 }
+.itemText:hover {
+  transform: scale(1.1);
+  transition: all 0.2s;
+}
 .itemLink {
   text-decoration: none;
 }
